--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.11.3",
+    "nice-color-palettes": "^3.0.0",
+    "p5": "^1.9.4",
+    "p5.brush": "^1.1.2",
     "scss": "^0.2.4",
+    "simplex-noise": "^4.0.1",
     "smartypants": "^0.2.2",
     "typescript": "^5.5.2"
   },
   "devDependencies": {
+    "@types/p5": "^1.7.6",
     "@typescript-eslint/parser": "^7.14.1",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.3",
