--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "check": "astro check && biome check",
+    "check:fix": "astro check && biome check --write",
     "stylelint": "stylelint '**/*.{astro,css,scss}'",
     "stylelint:fix": "stylelint '**/*.{astro,css,scss}' --fix"
   },
@@ -28,18 +28,12 @@
     "typescript": "^5.5.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@types/p5": "^1.7.6",
-    "@typescript-eslint/parser": "^7.14.1",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.3",
-    "eslint": "^9.5.0",
-    "eslint-plugin-astro": "^1.2.2",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
     "husky": "^9.0.11",
     "postcss-html": "^1.7.0",
-    "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0",
-    "prettier-plugin-astro-organize-imports": "^0.4.9",
     "sharp": "^0.33.4",
     "stylelint": "^16.6.1",
     "stylelint-config-astro": "^1.0.4",
