--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,7 @@
   "recommendations": [
     "astro-build.astro-vscode",
     "deque-systems.vscode-axe-linter",
-    "dbaeumer.vscode-eslint"
+    "biomejs.biome"
   ],
-  "unwantedRecommendations": []
+  "unwantedRecommendations": ["dbaeumer.vscode-eslint"]
 }
