--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,15 @@
 {
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
-  "eslint.validate": [
-    "astro",
-    "javascript",
-    "javascriptreact",
-    "json",
-    "typescript",
-    "typescriptreact"
-  ],
   "editor.codeActionsOnSave": {
     "source.fixAll": "explicit"
   },
-  "editor.defaultFormatter": "astro-build.astro-vscode",
-  "eslint.enable": true,
+  "editor.defaultFormatter": "biomejs.biome",
   "prettier.documentSelectors": ["**/*.astro"],
+  "[astro]": {
+    "editor.defaultFormatter": "astro-build.astro-vscode"
+  },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "biomejs.biome"
   }
 }
